testsuite/deprecated/veronac/resolution/compile-fail/unknown-symbol.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class Main {
  // CHECK-L: unknown-symbol.verona:${LINE:+1}:6: error: Cannot find value for symbol 'Foo'
  f: Foo;

  // CHECK-L: unknown-symbol.verona:${LINE:+1}:11: error: Cannot find value for symbol 'Bar'
  main(): Bar {
    // CHECK-L: unknown-symbol.verona:${LINE:+1}:5: error: Cannot find value for symbol 'baz'
    baz
  }
}
